# xp

./: .gitignore  README.md  devbox.json  docker-compose.prod.yml  package.json  pnpm-lock.yaml  process-compose.yml
apps/xp-bot/: .env.example  README.md  dev.sh  pyproject.toml
apps/xp-bot/config/: config.py
apps/xp-bot/core/api_services/auth_api_service/: auth_api_service.py
apps/xp-bot/core/api_services/experiment_api_service/: __init__.py  exceptions.py
apps/xp-bot/core/api_services/subscription_api_service/: subscription_api_service.py
apps/xp-bot/core/models/: experiment.py  user.py
apps/xp-bot/modules/experiment/exceptions/: exceptions.py
apps/xp-bot/modules/experiment/handlers/: complete_experiment.py  confirm_start_experiment.py
apps/xp-bot/modules/experiment/keyboards/: confirm_start_experiment_keyboard.py
apps/xp-bot/modules/experiment/services/: exceptions.py  experiment_service.py
apps/xp-bot/modules/observation/handlers/: __init__.py  handle_log_observation.py  log_observation.py
apps/xp-bot/modules/observation/lexicon/: __init__.py
apps/xp-bot/modules/observation/services/: __init__.py  observation_service.py
apps/xp-bot/modules/profile/handlers/: __init__.py  show_my_experiments.py  show_my_observations.py
apps/xp-bot/modules/profile/keyboards/: profile_keyboard.py
apps/xp-bot/modules/profile/lexicon/: __init__.py
apps/xp-bot/modules/root/handlers/: error.py  handle_buy_subscription.py  handle_check_subscription.py  handle_learn_more_subscription.py
apps/xp-bot/modules/root/keyboards/: buy_keyboard.py  check_subscription.py
(+396 files in other folders)
