[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["George Kobunov <ancient.gekob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.8.0"
environs = "^9.5.0"
aiohttp = "^3.8.5"
pydantic = "^2.1.1"
apscheduler = "^3.10.1"
redis = "^4.6.0"
py-mon = "^2.0.5"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
